feat: add ConvertTextToVarchar.
