# router/router.go
@@ -96,6 +96,13 @@ var routes = Routes{
 	},
 
 	{
+		"ConvertTextToVarchar",
+		http.MethodPost,
+		"/api/v1/db/convertTextToVarchar",
+		src.ConvertTextToVarchar,
+	},
+
+	{
 		"GetCidFromName",
 		http.MethodPost,
 		"/api/v1/pug/getCidFromName",
